# VibeGuard

./: .dockerignore  .gitignore  .vscodeignore  CHANGELOG.md  Dockerfile  README.md  Upgrade documentation.md  VibeGuard-PRD.md  action.yml  package-lock.json  package.json  tsconfig.json
demo/: README.md  unsafe-ai-sample.ts  vibeguard-demo.ass
deploy/: .env.example  compose.oidc.yaml  compose.yaml
jetbrains/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
rust-lsp/: Cargo.toml
rust-lsp/src/: lib.rs  main.rs
scripts/: assert-node-lts.js  build-demo-video.ps1  build.js  create-pr-review-payload.cjs  docker-entrypoint.sh  package-vsix.js
src/: batchFixes.ts  cli.ts  config.ts  criticalAlert.ts  customRules.ts  dedup.ts  extension.ts  fixValidation.ts  gitAuthors.ts  gitFilter.ts  ignore.ts  layers.ts  lspActions.ts  lspServer.ts  reporters.ts  scanner.ts  semgrep.ts  subscription.ts  telemetry.ts  types.ts  utils.ts
tests/: actionManifest.test.ts  batchFixes.test.ts  cliDeploymentScan.test.ts  cliPackageSync.test.ts  cliTelemetry.test.ts  compliance.test.ts  config.test.ts  criticalAlert.test.ts  customRules.test.ts  demoSample.test.ts  dockerImage.test.ts  extensionOnboarding.test.ts  extensionPersistence.test.ts  findingsDashboard.test.ts  findingsIngest.test.ts  findingsServer.test.ts  findingsStorage.test.ts  fixValidation.test.ts  gitAuthors.test.ts  gitFilter.test.ts  ignore.test.ts  jetbrainsPlugin.test.ts  l3Panel.test.ts  layers.test.ts  llmAnalyzer.test.ts  llmCredentials.test.ts  lspActions.test.ts  lspScheduling.test.ts  (+12 more)
(+41 files in other folders)
