[package]
name = "vibeguard-lsp"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

[dependencies]
aho-corasick = "1.1.3"
flate2 = "1.1.5"
globset = "0.4.15"
once_cell = "1.20.2"
regex = "1.11.1"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
serde_yaml = "0.9.34"
tokio = { version = "1.43.0", features = ["io-std", "macros", "rt-multi-thread", "sync"] }
tower-lsp = "0.20.0"
